GroovyShell parse script use given context
This is useful in embedded scripts somehow.